Fix bug where ellipsis is not showing on click event
Resolved this by adding fixed width to blurb content and updating white-space property to "nowrap" although the latter means the content is shortened to one line instead of desired look of two/three lines. Needs further debugging.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -135,6 +135,7 @@ main {
 .shortened-blurb {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: wrap;
+  white-space: nowrap;
   max-height: 50px;
+  width: 300px;
 }
